<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical|fill_vertical"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="80dp"
        android:paddingRight="30dp"
        android:paddingBottom="80dp"
        tools:context=".CreateAccount">

    <!-- TODO: Update blank fragment layout -->

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f_ca_title"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/name_label" />

        <EditText
                android:id="@+id/inName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/email_label" />

        <EditText
                android:id="@+id/inEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/password_label" />

        <EditText
                android:id="@+id/inPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                tools:text="sdfsdfsdsd" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/confirm_label" />

        <EditText
                android:id="@+id/inConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/confirm_hint"
                android:inputType="textPassword"
                tools:text="sdfsdfsdsd" />
    </LinearLayout>

    <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Account" />

    <TextView
            android:id="@+id/linkToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Already have an account? Click here to login in."
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="12sp"
            android:textStyle="bold" />


</LinearLayout>